# TerrainGeneration

./: .gitignore  CMakeLists.txt  MarchingCubesUI.cpp  MarchingCubesUI.h  ProgramManager.cpp  ProgramManager.h  ReadMe.md  config.json  config.md  main.cpp  marching_cubes.cpp  marching_cubes.h  shadow_mapping.cpp  shadow_mapping.h  ui_main.cpp  ui_main.h
assets/gui/layout/: layout.xml
assets/scenes/: scene1.xml
common/: ConfigData.h
gui/: Button.cpp  Button.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  EventDispatcher.cpp  EventDispatcher.h  FocusManager.h  Fwd.h  GUIManager.h  GUIObject.cpp  GUIObject.h  KeyAction.cpp  KeyAction.h  KeyboardInteractable.cpp  KeyboardInteractable.h  MouseInteractable.h  TODO.md  Types.h  UIObject.cpp  UIObject.h  UserInteraction.cpp  UserInteraction.h  UserInteractionInterfaces.h  ui_types.h
gui/elements/: Button.cpp  Button.h  CameraController.h  KeyAction.cpp  KeyAction.h
include/: BMP.h  Camera.cpp  Camera.h  gltext.cpp  gltext.h
include/fmt/: core.h  format.h
include/fplus/: fwd.hpp
include/freetype-gl++/: dummy.cpp  freetype-gl++.hpp  opengl.hpp  shader+.cpp  shader+.hpp  texture-atlas+.cpp  texture-atlas+.hpp  texture-font+.cpp  texture-font+.hpp  vec234.hpp  vertex-buffer+.cpp  vertex-buffer+.hpp
include/freetype-gl++/freetype-gl/: CMakeLists.txt  arial-16.h  edtaa3func.h  font-manager.cpp  font-manager.h  freetype-gl.h  markup.h  mat4.cpp  mat4.h  opengl.h  platform.cpp  platform.h  shader.cpp  shader.h  text-buffer.cpp  text-buffer.h  texture-atlas.cpp  texture-atlas.h  texture-font.cpp  texture-font.h  vec234.h  vector.cpp  vector.h  vertex-attribute.cpp  (+3 more)
include/observable/: value.hpp
marching_cubes/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  DensityGenerators.cpp  DensityGenerators.h  FastChunkGen.cpp  FastChunkGen.h  Light.cpp  Light.h  lookuptables.h
marching_cubes/archive/: OldChunk.cpp
marching_cubes/shaders/: GlslShaderLoader.cpp  ShaderLiterals.h  blin_phong.frag  blin_phong.vert  cube_edges.geom  cubes_to_triangles.geom  mc_chunk.comp  mvp_light.vert  normal_to_line.geom  normal_to_line.vert  pass_through.vert  uniform_color.frag  uniform_color_light.frag
rendering/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Data.cpp  Data.h  ModelRenderer.cpp  ModelRenderer.h  SceneLoader.cpp  SceneLoader.h  Surroundings.cpp  Surroundings.h  lookuptables.h
rendering/archive/: DensityGenerators.cpp  DensityGenerators.h  OldChunk.cpp  OldChunk.h
rendering/environment/: EnvironmentRenderer.cpp  EnvironmentRenderer.h
rendering/marching_cubes/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  ChunkUsageManager.cpp  ChunkUsageManager.h  LODChunkController.cpp  LODChunkController.h  LODTypes.cpp  LODTypes.h  MCTextures.cpp  MCTextures.h  Surroundings.cpp  Surroundings.h  SurroundingsEnums.cpp  SurroundingsEnums.h  TerrainGenerationOptions.cpp  TerrainGenerationOptions.h  lookuptables.h
rendering/models/: GraphicsModel.cpp  GraphicsModel.h  GraphicsModelBase.cpp  GraphicsModelBase.h  InstancedGraphicsModel.cpp  InstancedGraphicsModel.h  ModelRenderer.cpp  ModelRenderer.h  SceneLoader.cpp  SceneLoader.h
rendering/shaders/: blin_phong.frag  cube_edges.geom  cubes_to_triangles.geom  framebuffer_screen.frag  mc_chunk.comp  mvp.vert  mvp_light.vert
rendering/shading/: CascadedShadowMap.cpp  CascadedShadowMap.h  ShadowMap.cpp  ShadowMap.h
rendering/shadow_maps/: CascadedShadowMap.cpp  CascadedShadowMap.h  ShadowMap.cpp  ShadowMap.h
rendering/text/: FontManager.cpp  FontManager.h  Text.cpp  Text.h  TextRenderer.cpp  TextRenderer.h
rendering/textures/: DrawTexture.cpp  FileTextureLoader.cpp  FileTextureLoader.h
rendering/utils/: DrawTexture.cpp  DrawTexture.h
shaders/: cube.vert  distance-field-2.vert  distance-field-3.frag  distance-field.frag  text.frag  text.vert  v3f-c4f.vert  v3f-t2f-c4f.vert
ui/: EventDispatcher.cpp  EventDispatcher.h  Font.cpp  Font.h  Fwd.h  GUIManager.h  GUIRenderer.cpp  GUIRenderer.h  KeyboardInteractable.cpp  TODO.md  TimedEvent.cpp  TimedEvent.h  elements.h  managers.h  ui_types.h  utils.cpp  utils.h
ui/bindings/: Binding.h  OneWayBinding.h  TwoWayBinding.h
ui/elements/: Button.cpp  Button.h  CameraController.cpp  CameraController.h  KeyAction.cpp  KeyAction.h  Label.cpp  Label.h  Slider.cpp  Slider.h  Switch.cpp  Switch.h  TextArea.cpp  TextArea.h
ui/interface/: Interactable.cpp  Interactable.h  KeyboardInteractable.cpp  KeyboardInteractable.h  MouseInteractable.cpp  MouseInteractable.h  UIObject.cpp  UIObject.h  ui_traits.h
ui/managers/: EventDispatcher.cpp  EventDispatcher.h  FocusManager.cpp  FocusManager.h  GUIManager.cpp  GUIManager.h  UIManager.cpp  UIManager.h
ui/text/: FontManager.cpp  Text.cpp  Text.h  TextRenderer.h
utils/: Colors.h  FPSCounter.cpp  FPSCounter.h  Geometry.cpp  Geometry.h  GlslShaderLoader.cpp  GlslShaderLoader.h  Lazy.h  ShaderLiterals.h  SparseBuffer.cpp  SparseBuffer.h  String.h  TempViewportSetter.h  TransformFeedback.cpp  TransformFeedback.h  exceptions.cpp  exceptions.h  geGL_utils.cpp  geGL_utils.h  gl_utils.cpp  gl_utils.h  lazy.h  loc_assert.h  logger.h  meta.h  now.h  print.h  shader_literals.h  types.h
utils/config/: Config.h  Config.tpp  JsonConfig.h
utils/containers/: Tree.h
utils/error_handling/: exceptions.cpp  exceptions.h
utils/graphics/: BoundingBox.h  BoundingBox.tpp  BoundingSphere.h  BoundingSphere.tpp  Geometry.cpp  GlslShaderLoader.cpp  SparseBuffer.cpp  SparseBuffer.h  TempViewportSetter.cpp  TempViewportSetter.h  TransformFeedback.cpp  TransformFeedback.h  ViewFrustum.cpp  ViewFrustum.h  common.h  geGL_utils.h
utils/io/: logger.h  logger.tpp  print.h
utils/meta/: chrono.h  geGL.h  glm.h  iterable.h  meta.h  specializations.h  string.h  tuple_utils.h
utils/parallel/: ThreadPool.h
utils/time/: FPSCounter.cpp  FPSCounter.h  now.h
utils/types/: CachedProperty.h  CachedProperty.tpp  Lazy.h  Lazy.tpp  Range.cpp  Range.h  Range.tpp  Zip.h  Zip.tpp
utils/various/: ByteLiterals.h  StringUtils.cpp  StringUtils.h  StringUtils.tpp  isin.h  loc_assert.h
(+40 files in other folders)
